@@ -15,8 +15,16 @@ update_skleid <- function() {
         cat("-> new version (", vv, ") of skleid is available\n")
         cat("-> press ENTER to update the package...\n")
         pause()
-        source("http://ygc.name/get_skleid.R")
-    } 
+        ## source("http://ygc.name/get_skleid.R")
+        for (lp in .libPaths()) {
+            libs <- list.files(lp)
+            if (length(grep("skleid", libs)) == 1) {
+                source(paste(lp, "skleid/extdata/get_skleid.R", sep="/"))
+                break
+            }
+        }
+        
+    }
 
     cat("  __________________________________________\n")
     cat("/ skleid (version=", vv, ") is up to date... \\\n") 
